--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,211 +1,203 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Registration"
-    android:background="#0F2355">
+    android:background="#0F2355"
+    tools:context=".Registration">
 
 
     <TextView
+        android:id="@+id/textView18"
         android:layout_width="335dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
         android:layout_marginTop="6dp"
-        android:layout_marginEnd="27dp"
+        android:layout_marginEnd="26dp"
         android:text="Registration"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="34dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="587dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/firstName"
         android:layout_width="335dp"
         android:layout_height="34dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="525dp"
+        android:layout_marginTop="173dp"
+        android:layout_marginEnd="38dp"
         android:background="@drawable/rounded_corners"
-        tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="112dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/lastName"
         android:layout_width="335dp"
         android:layout_height="34dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="450dp"
+        android:layout_marginTop="248dp"
+        android:layout_marginEnd="38dp"
         android:background="@drawable/rounded_corners"
-        tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="193dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/Email"
         android:layout_width="335dp"
         android:layout_height="34dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="372dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="325dp"
+        android:layout_marginEnd="38dp"
         android:background="@drawable/rounded_corners"
-        tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="282dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/password_toggle"
         android:layout_width="335dp"
         android:layout_height="34dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="403dp"
-        android:inputType="textPassword"
+        android:layout_marginEnd="38dp"
         android:background="@drawable/rounded_corners"
-        tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="365dp" />
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/licNo"
         android:layout_width="335dp"
         android:layout_height="34dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="477dp"
+        android:layout_marginEnd="38dp"
         android:background="@drawable/rounded_corners"
-        tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="458dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/policyNo"
         android:layout_width="335dp"
         android:layout_height="34dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="556dp"
+        android:layout_marginEnd="38dp"
         android:background="@drawable/rounded_corners"
-        tools:layout_editor_absoluteX="38dp"
-        tools:layout_editor_absoluteY="542dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/loginToApp"
         android:layout_width="150dp"
         android:layout_height="40dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="22dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginTop="612dp"
+        android:layout_marginEnd="216dp"
         android:onClick="LoginToApp"
         android:text="Login"
         android:textAlignment="center"
-        tools:layout_editor_absoluteX="26dp"
-        tools:layout_editor_absoluteY="640dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/skipBtn"
         android:layout_width="150dp"
         android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="49dp"
 
+        android:layout_marginTop="612dp"
+        android:layout_marginEnd="48dp"
         android:text="Skip"
         android:textAlignment="center"
-        tools:layout_editor_absoluteX="223dp"
-        tools:layout_editor_absoluteY="640dp">
-    </Button>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></Button>
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="249dp"
         android:layout_height="92dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="54dp"
-        app:srcCompat="@drawable/logo_01"
-        tools:layout_editor_absoluteX="81dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:layout_marginEnd="81dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_01" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="45dp"
-        android:textColor="@color/white"
         android:layout_marginTop="147dp"
+        android:layout_marginEnd="283dp"
+        android:text="First Name"
+        android:textColor="@color/white"
         android:textSize="17sp"
-        android:text="First Name" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="45dp"
-        android:textColor="@color/white"
         android:layout_marginTop="217dp"
+        android:layout_marginEnd="284dp"
+        android:text="Last Name"
+        android:textColor="@color/white"
         android:textSize="17sp"
-        android:text="Last Name" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="45dp"
-        android:textColor="@color/white"
         android:layout_marginTop="294dp"
+        android:layout_marginEnd="324dp"
+        android:text="Email"
+        android:textColor="@color/white"
         android:textSize="17sp"
-        android:text="Email" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="45dp"
+        android:layout_marginTop="370dp"
+        android:layout_marginEnd="291dp"
+        android:text="Password"
         android:textColor="@color/white"
         android:textSize="17sp"
-        android:layout_marginBottom="338dp"
-        android:text="Password" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="45dp"
+        android:layout_marginTop="448dp"
+        android:layout_marginEnd="276dp"
+        android:text="License No."
         android:textColor="@color/white"
-        android:layout_marginBottom="260dp"
         android:textSize="17sp"
-        android:text="License No." />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="45dp"
+        android:layout_marginTop="525dp"
+        android:layout_marginEnd="289dp"
+        android:text="Policy No."
         android:textColor="@color/white"
         android:textSize="17sp"
-        android:layout_marginBottom="183dp"
-        android:text="Policy No." />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
