--- a/app/src/main/res/layout/activity_signed_in.xml
+++ b/app/src/main/res/layout/activity_signed_in.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0F2355"
+    android:orientation="vertical"
     tools:context=".SignedInActivity">
 
     <Button
@@ -13,8 +14,13 @@
         android:layout_height="wrap_content"
         android:text="Button"
         android:onClick="saveData"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+      />
+
+    <Button
+        android:id="@+id/goToMapsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Open Maps"
+        android:onClick="goToMaps"
+        />
+</LinearLayout>
