--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,9 @@
     <color name="btnColor">#549F93</color>
 
     <color name="backgroundColor">#04132c</color>
+    <color name="background">#0F2355</color>
+    <color name="logo">#3B6BfB</color>
+    <color name="gradient_start">#04132C</color>
+    <color name="gradient_end">#3B6BfB</color>
+    <color name="gray">#808080</color>
 </resources>
