--- a/app/src/main/res/layout/activity_insurance_exchange.xml
+++ b/app/src/main/res/layout/activity_insurance_exchange.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".infoExchange"
+    tools:context=".insuranceExchange"
     android:background="@color/backgroundColor">
 
     <RelativeLayout
@@ -106,6 +106,7 @@
                 android:hint="  Type Something"
                 android:textColorHint="@color/white"
                 android:textColor="@color/white"/>
+
 
         </RelativeLayout>
 
